<resources>
    <string name="app_name">Helper</string>
    <string name="nombre_proyecto">NOMBRE PROYECTO</string>
    <string name="agregar">AGREGAR</string>
    <string name="trabajo">Trabajo</string>
    <string name="estudio">Estudio</string>
    <string name="perfil">Perfil</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="inicio">INICIO</string>
    <string name="fin">FIN</string>
    <string name="TextView">Selecciona un nombre</string>
    <string name="proyectos">Proyectos</string>
    <string name="tareas">Tareas</string>
    <string name="reuniones">Reuniones</string>
    <string name="lugar_de_la_reuni_n">LUGAR DE LA REUNIÓN</string>
    <string name="nombre_tarea">NOMBRE TAREA</string>
    <string name="nombre_reunion">NOMBRE REUNION</string>
    <string name="comunidad_estudiantil">Comunidad estudiantil</string>
    <string name="horario">Horario</string>
    <string name="portal_estudiantil">Portal estudiantil</string>
    <string name="documentos">Documentos</string>
    <string name="anadir_evento">Añadir evento</string>
    <string name="contactos">Contactos</string>
    <string name="todo">TODO</string>
    <string name="lunes">Lunes</string>
    <string name="lua">Libre</string>
    <string name="lub">Libre</string>
    <string name="luc">Libre</string>
    <string name="lud">Libre</string>
    <string name="lue">Libre</string>
    <string name="luf">Libre</string>
    <string name="maa">Libre</string>
    <string name="mab">Libre</string>
    <string name="mac">Libre</string>
    <string name="mad">Libre</string>
    <string name="mae">Libre</string>
    <string name="maf">Libre</string>
    <string name="mia">Libre</string>
    <string name="mib">Libre</string>
    <string name="mic">Libre</string>
    <string name="mid">Libre</string>
    <string name="mie">Libre</string>
    <string name="mif">Libre</string>
    <string name="jua">Libre</string>
    <string name="jub">Libre</string>
    <string name="juc">Libre</string>
    <string name="jud">Libre</string>
    <string name="jue">Libre</string>
    <string name="juf">Libre</string>
    <string name="via">Libre</string>
    <string name="vib">Libre</string>
    <string name="vic">Libre</string>
    <string name="vid">Libre</string>
    <string name="vie">Libre</string>
    <string name="vif">Libre</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="viernes">Viernes</string>
    <string name="jueves">Jueves</string>
    <string name="txt_lua"> </string>
    <string name="txt_lub"> </string>
    <string name="txt_luc"> </string>
    <string name="txt_lud"> </string>
    <string name="txt_lue"> </string>
    <string name="txt_luf"> </string>
    <string name="txt_maa"> </string>
    <string name="txt_mab"> </string>
    <string name="txt_mac"> </string>
    <string name="txt_mad"> </string>
    <string name="txt_mae"> </string>
    <string name="txt_maf"> </string>
    <string name="txt_mia"> </string>
    <string name="txt_mib"> </string>
    <string name="txt_mic"> </string>
    <string name="txt_mid"> </string>
    <string name="txt_mie"> </string>
    <string name="txt_mif"> </string>
    <string name="txt_jua"> </string>
    <string name="txt_jub"> </string>
    <string name="txt_juc"> </string>
    <string name="txt_jud"> </string>
    <string name="txt_jue"> </string>
    <string name="txt_juf"> </string>
    <string name="txt_via"> </string>
    <string name="txt_vib"> </string>
    <string name="txt_vic"> </string>
    <string name="txt_vid"> </string>
    <string name="txt_vie"> </string>
    <string name="txt_vif"> </string>
    <string name="txt_codigo">Codigo de Horario</string>
    <string name="BotonBuscar">Buscar Producto</string>
    <string name="BotonRegistrar">Registrar Producto</string>
    <string name="BotonEliminar">Eliminar Producto</string>
    <string name="BotonModificar">Modificar Producto</string>
    <string name="calculo_i">Cálculo I</string>
    <string name="calculo_ii">Cálculo II</string>
    <string name="calculo_iii">Cálculo III</string>
    <string name="algebra_y_geometria">Álgebra y Geometría</string>
    <string name="algebra_lineal">Álgebra Lineal</string>
    <string name="ecuaciones_diferenciales">Ecuaciones Diferenciales</string>
    <string name="mecanica">Mecánica</string>
    <string name="calor_y_ondas">Calor y Ondas</string>
    <string name="electricidad_y_magnetismo">Electricidad y Magnetismo</string>
    <string name="programacion">Programación</string>
    <string name="programacion_avanzada">Programación Avanzada</string>
    <string name="estructura_de_datos">Estructura de Datos</string>
    <string name="todo2">TODO</string>
    <string name="nombre">nombre</string>
    <string name="universidad">universidad</string>
    <string name="compania">compania</string>
    <string name="celular">celular</string>
    <string name="mail">mail</string>
    <string name="mai">mail</string>
    <string name="actualizar">actualizar</string>
    <string name="registrar">registrar</string>
    <string name="cont2">cont2</string>
    <string name="cont1">cont1</string>
    <string name="ver">Ver</string>
    <string name="contactos2">Contactos</string>
    <string name="home">Home</string>
    <string name="a_adir_contacto">AÑADIR CONTACTO</string>
    <string name="modificar">MODIFICAR</string>
</resources>
