<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfilis"
    android:background="@drawable/sky">

    <EditText
        android:id="@+id/Nombre"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="85dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="27dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Universidad"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="87dp"
        android:layout_marginLeft="82dp"
        android:layout_marginRight="87dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/universidad"
        android:inputType="textPersonName"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombre"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Compania"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="85dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/compania"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Universidad"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Celular"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="87dp"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="87dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/celular"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Compania"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Mail"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="89dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="89dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/mai"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Celular"
        tools:targetApi="o" />

    <Button
        android:id="@+id/Boton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:onClick="Registrar"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Mail"
        tools:text="registrar" />


</android.support.constraint.ConstraintLayout>