<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTrabajo"
    android:background="@drawable/edificio">

    <Button
        android:id="@+id/buttonproyectos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proyectos"
        android:backgroundTint="@color/color5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttontareas" />

    <Button
        android:id="@+id/buttontareas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tareas"
        android:backgroundTint="@color/color5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonproyectos"
        app:layout_constraintBottom_toTopOf="@+id/buttonreuniones" />

    <Button
        android:id="@+id/buttonreuniones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reuniones"
        android:backgroundTint="@color/color5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttontareas"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>