<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAgregarTarea"
    android:background="@drawable/costanera">

    <EditText
        android:id="@+id/nombreTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombre_tarea"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="83dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/descripcionTarea" />

    <EditText
        android:id="@+id/descripcionTarea"
        android:layout_width="218dp"
        android:layout_height="82dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/descripcion"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="146dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreTarea"
        app:layout_constraintBottom_toTopOf="@+id/fechaInicioTarea" />

    <EditText
        android:id="@+id/fechaInicioTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/inicio"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="266dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionTarea"
        app:layout_constraintBottom_toTopOf="@+id/fechaFinTarea" />

    <EditText
        android:id="@+id/fechaFinTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/fin"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="332dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechaInicioTarea"
        app:layout_constraintBottom_toTopOf="@+id/botonAgregarTarea2" />

    <Button
        android:id="@+id/botonAgregarTarea2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/agregar"
        android:onClick="AgregarTarea"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechaFinTarea"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>