<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAgregarProyecto"
    android:background="@drawable/edificio">

    <EditText
        android:id="@+id/nombreProyecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombre_proyecto"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="83dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/descripcionProyecto" />

    <EditText
        android:id="@+id/descripcionProyecto"
        android:layout_width="218dp"
        android:layout_height="82dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/descripcion"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="146dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreProyecto"
        app:layout_constraintBottom_toTopOf="@+id/fechaInicioProyecto" />

    <EditText
        android:id="@+id/fechaInicioProyecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/inicio"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="266dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionProyecto"
        app:layout_constraintBottom_toTopOf="@+id/fechaFinProyecto" />

    <EditText
        android:id="@+id/fechaFinProyecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/fin"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="332dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechaInicioProyecto"
        app:layout_constraintBottom_toTopOf="@+id/botonAgregarProyecto" />

    <Button
        android:id="@+id/botonAgregarProyecto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/agregar"
        android:onClick="AgregarProyecto"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechaFinProyecto"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>